--- a/style.css
+++ b/style.css
@@ -1,3 +1,8 @@
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
 @font-face {
     font-family: 'Poppins';
     src: url(./downloads/Poppins-Regular.ttf) format('truetype');
@@ -15,12 +20,29 @@
     width: 100%;
 }
 .links a,ul{
+    position: relative;
     text-decoration: none;
     list-style: none;
     display: flex;
     gap: 40px;
     color: black;
 }
+
+.links a::after {
+  content: '';
+  position: absolute;
+  left: 0;
+  bottom: -20px;
+  height: 5px;
+  width: 0%;
+  background-color: #8b6f3d; /* Match your gold color */
+  transition: width 0.4s ease-in-out;
+}
+
+.links a:hover::after {
+  width: 100%;
+}
+
 .att{
     display: flex;
     gap: 15px;
@@ -35,23 +57,160 @@
 }
 .button{
  background-color: #987742;
-    padding: 11px 15px;
+    padding: 13px 16px;
     color: white;
     text-decoration: none;
 }
 .mainhead{
     background-image: url('./images/hero_image.webp');
-  background-size: cover;
+  background-size: 100% 100%;
   height: 550px;
   display: flex;
-  gap: 170px;
+  gap: 160px;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   color: white;
   text-align: center;
-  font-weight: bolder;
+  
+
+}
+.mainhead h1{
+    text-align: center;
+    font-size: 70px;
+     letter-spacing: 5px;
+      width: 900px;
+        line-height: 100%;
+         margin: auto;
+         margin-top: 130px;
+         font-weight: 1500;
 }
 .button:hover{
+    text-decoration: underline;
+}
+.nav2{
+    display: flex;
+    justify-content: left;
+    align-items: center;
+    gap: 30px;
+    margin-top: 20px;
+    height: 4rem;
+    width: 100%;
+    padding-left: 30px;
+    border-bottom: 1px solid black;
+}
+.nav2 a {
+  position: relative;
+  text-decoration: none;
+  color: #000;
+  font-size: 17px;
+   /* optional: adjust color */
+}
+
+.nav2 a::after {
+  content: '';
+  position: absolute;
+  width: 0%;
+  height: 5px; 
+  bottom: -20px;
+  left: 0;
+  background-color: #8b6f3d; 
+  transition: width 0.4s ease;
+}
+
+.nav2 a:hover::after {
+  width: 100%;
+}
+.content{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 50vh;
+    padding: 20px;
+ 
+
+}
+.content h2{
+   color: #8b6f3d;
+    font-size: 40px;
+}
+.content p{
+    color: rgb(77, 77, 77);
+    font-size: large;
+}
+.content h2,p{
+    width: 50%;
+    margin: auto;
+}
+.conlink{
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+    margin-top: -60px;
+    margin-bottom: 50px;
+    align-items: center;
+}
+.conlink a{
+    text-decoration: none;
+    width: max-content;
+    color: #8b6f3d;
+    border:1px solid #8b6f3d;
+    padding: 15px 30px;
+}
+.conlink a:hover{
+    text-decoration: underline;
+}
+.rooms{
+    margin-top: 100px;
+}
+.rooms h2,.cap{
+    color: #8b6f3d;
+    text-align: center;
+}
+.selector{
+    text-align: center;
+    margin-top: 50px;
+}
+.selector a{
+    text-decoration: none;
+    color: black;
+    font-size: large;
+    padding: 15px 30px;
+    position: relative;
+}
+.selector a::after {
+  content: '';
+  position: absolute;
+  width: 0%;
+  height: 5px; 
+  bottom: -2px;
+  left: 21px;
+  background-color: #8b6f3d; 
+  transition: width 0.4s ease;
+}
+
+.selector a:hover::after {
+  width: 55%;
+}
+.cards{
+    margin: 20px;
+    display: flex;
+    gap: 10px;
+}
+.cards h3{
+    color: #8b6f3d;
+    font-size: 25px;
+}
+.desc{
+    padding: 10px;
+}
+.butt2{
+text-decoration: none;
+    width: max-content;
+    color: #8b6f3d;
+    border:1px solid #8b6f3d;
+    padding: 15px 30px;
+}
+.butt2:hover{
     text-decoration: underline;
 }
