--- a/style.css
+++ b/style.css
@@ -263,11 +263,13 @@ text-decoration: none;
     border: 3px solid black;
 }
 .joinbenefits{
+    display: flex;
+    justify-content: space-around;
     padding-left: 90px;
     font-size: small;
     align-items: center;
     text-align: center;
-    list-style: outside;
+    
 }
 .butt3 a{
     background-color: #987742;
